# portfolio-insights-hub

./: .env  README.md  engine_model_facts.json  render.yaml
engine/: .gitignore  README.md  pyproject.toml
engine/config/: market_universe.csv  risk_profiles.json
engine/data/sample/: README.md  algoeagle_risk_targets.csv
engine/docs/: 00_Analisi_Sistema_AlgoEagle.docx  00_analisi_sistema.md  01_roadmap.md  02_risk_engine_spec.md  03_architettura_e_workflow.md  04_options_research_brief.md  05_api_contract.md  06_repo_structure.md  ARCHITETTURA.md  KNOWN_ISSUES.md  market_data.md
engine/docs/validation/: frontend_dashboard_results.md  frontend_upload_results.md  models_expansion_results.md  per_model_backtest_real_full.csv  per_model_backtest_real_full.json  per_model_backtest_results.md  per_model_backtest_sample.csv  per_model_backtest_sample.json  phase3_results.md  phase4_results.md  risk_profiles_and_design_results.md  signals_stage1_results.md
engine/notebooks/: 01_risk_validation.ipynb  README.md
engine/prompts/: 00_claude_code_onboarding.md  01_task_risk_engine.md  02_lovable_frontend.md
engine/research/options-regime/: 00_literature_notes.md  01_load_vol_indices.ipynb  02_signal_threshold.ipynb  FINDINGS.md  (+7 more)
engine/scripts/: refresh_market_data.sh
engine/tests/: conftest.py  test_analytical_ground_truth.py  test_api.py  test_backtest.py  test_models_expansion.py  test_optimization.py  test_per_model_backtest.py  test_pipeline.py  test_profiles.py  test_risk_engine.py  test_signals.py  test_signals_stage1.py  test_upload.py  test_var_backtesting.py
(+175 files in other folders)
