[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa_engine"
version = "0.1.0"
description = "Motore interno di asset allocation quantitativa (LFG)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "LFG Asset Allocation Team" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "Riskfolio-Lib>=6.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.8",
    "jupyter>=1.0",
    "fastapi>=0.110",   # API + TestClient nei test
    "httpx>=0.27",      # richiesto da starlette.testclient
]
# Connettori dati di produzione (installati solo dove disponibili)
data = [
    "xbbg>=0.7",          # wrapper Bloomberg (richiede blpapi + terminale)
    "yfinance>=0.2",      # solo per test/prototipo
    "pyarrow>=15.0",      # parquet
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
